# hot-reload-cfx

./: .gitignore  CONTRIBUTING.fr.md  CONTRIBUTING.md  Cargo.toml  README.fr.md  README.md  build.ps1  docker-build.ps1  install-targets.ps1  version.fx.json  version.ui.json  version.watcher.json
.github/workflows/: build-ui.yml  build.yml  pnpm.yml  rust.yml
crates/hot-reload-common/: Cargo.toml
crates/hot-reload-common/src/: lib.rs
crates/hot-reload-keygen/: Cargo.toml
crates/hot-reload-keygen/src/: main.rs
crates/hot-reload-ui/: Cargo.toml
crates/hot-reload-ui/src/: main.rs
crates/hot-reload-ui/src/app/: config.rs  mod.rs  ui.rs
crates/hot-reload-ui/src/app/render/: content.rs  header.rs  mod.rs  strip.rs  tree.rs
crates/hot-reload-ui/src/app/render/main/: hot.rs  log.rs  mod.rs
crates/hot-reload-ui/src/utils/: keygen.rs  mod.rs  translate.rs
crates/hot-reload-watcher/: Cargo.toml
crates/hot-reload-watcher/src/: config.rs  lib.rs  main.rs  watcher.rs
locales/: en.json  fr.json
resources/hot-reload/: fxmanifest.lua  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
resources/hot-reload/src/server/: main.ts
resources/hot-reload/src/server/class/: app.ts
scripts/: Cargo.toml  build.rs
src/: main.rs  watcher.rs
