[package]
name = "hot-reload"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.24", features = ["default_fonts"] }
rfd = "0.12"
notify = "6.1"
sysinfo = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# regex = "1.5"
once_cell = "1.8"
tokio = { version = "1", features = ["full"] }
walkdir = "2.3"
futures = "0.3"
tokio-tungstenite = "0.19"
image = { version = "0.25.0-preview.0" }

[dependencies.winapi]
version = "0.3"
features = [
    "winuser",
    "windef",
    "wincon",
    "processthreadsapi",
    "handleapi",
    "fileapi",
    "winnt",
    "winbase",
    "consoleapi"
]