[package]
name = "hot-reload-ui"
version = "0.1.0"
author = "SUP2Ak"
edition = "2021"

[dependencies]
hot-reload-common = { path = "../hot-reload-common" }
eframe = "0.26"
egui = "0.29.1"
image = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.8"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["connect"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
rfd = "0.13"
walkdir = "2.4"
chrono = "0.4"
egui_extras = { version = "0.26.0-alpha.2", features = ["image", "svg", "file"] }
rand = "0.8"
base64 = "0.21"