[package]
name = "hot-reload-watcher"
author = "SUP2Ak"
version = "0.1.0"
edition = "2021"

[dependencies]
hot-reload-common = { path = "../hot-reload-common" }
tokio = { version = "1", features = ["full"] }
notify = "6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = "0.21"
futures = "0.3"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
walkdir = "2.3"